<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.remimichel.activities.SearchableActivity" >
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_download"
        android:icon="@drawable/ic_action_download_white"
        android:title="@string/action_download"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="always"
        tools:ignore="AppCompatResource"/>
</menu>
